<resources>
    <string name="app_name">Android</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="Usuario">Usuario</string>
    <string name="btnGuardarCambios">Guardar Cambios</string>
    <string name="pasAnterior">Contraseña Anterior</string>
    <string name="pasNueva">Contraseña Nueva</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity__temas">activity_Temas</string>
    <string name="btnLogins">Ingresar</string>
    <string name="pas">Contraseña</string>
    <string name="registro">Registrarse</string>
    <string name="tvReg">o</string>

    <string name="tbCuetionario">Cuestionario</string>
    <string name="tbEncuentraError">Encuentra el error</string>
    <string name="tbCompletaSintaxis">Completa la sintaxis</string>
    <string name="tbPuntuaciones">Puntuaciones</string>

    <string name="tvPass">Ingrese su contraseña otra vez</string>

    <string name="introduccion1">La P.O.O. (también conocida como O.O.P., por sus siglas en inglés) es lo que se conoce como un paradigma o modelo de programación.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      "
    android:textSize="15dp</string>
    <string name="introduccion2"> Esto significa que no es un lenguaje específico, o una tecnología, sino una forma de programar, una manera de plantearse la programación. No es la única (o necesariamente mejor o peor que otras), pero se ha constituido en una de las formas de programar más populares e incluso muchos de los lenguajes que usamos hoy día lo soportan o están diseñados bajo ese modelo (PHP, AS2, AS3,…).


    Lo que caracteriza a la POO es que intenta llevar al mundo del código lo mismo que encontramos en El Mundo Real™. Cuando miramos a nuestro alrededor ¿qué vemos? pues, cosas, objetos, pero podemos reconocer estos objetos porque cada objeto pertenece a una clase, eso nos permite distinguir, por ejemplo, un perro de un auto (porque son de clases diferentes) y también un TV de otro (porque, aunque sean iguales, cada uno es un objeto distinto).
</string>
    <string name="clases1">Las clases son plantillas que agrupan comportamiento (métodos) y estados (atributos) de los futuros objetos.
            Los objetos son instancias de una clase.Una clase se puede definir de las propiedades y comportamiento de un tipo de objeto concreto. La instanciación es la lectura de estas definiciones y la creación de un objeto a partir de ella.</string>
    <string name="clases2">Descripción abstracta de un grupo de objetos con
propiedades similares (atributos), comportamiento común
(operaciones), relaciones comunes con otros objetos y
semántica común.Ingrese su contraseña otra vez</string>

</resources>
