<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.daniel.android.Login"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/etl"
                android:gravity="center_horizontal">
                <EditText
                    android:id="@+id/etUsuariol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="@dimen/etsize"
                    android:hint="@string/Usuario"/>
                <EditText
                    android:id="@+id/etPassl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/etUsuariol"
                    android:layout_marginTop="@dimen/margintopetet"
                    android:width="@dimen/etsize"
                    android:hint="@string/pas"/>
            </LinearLayout>
            <LinearLayout
                android:layout_below="@id/etl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <Button
                    android:id="@+id/btnIniciarsesion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/etPassl"
                    android:layout_marginTop="@dimen/margintopetet"
                    android:text="@string/btnLogins"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margintopetet"
                    android:text="@string/tvReg"/>
                <Button
                    android:layout_marginTop="@dimen/margintopetet"
                    android:id="@+id/btnRegistrarse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registro"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
